crates/nash-parse/src/pattern/snapshots/nash_parse__pattern__list__tests__empty.snap
---
source: crates/nash-parse/src/pattern/list.rs
description: "Code:\n\n[]"
---
Located {
    region: Region {
        start: Position {
            line: 1,
            column: 1,
        },
        end: Position {
            line: 1,
            column: 3,
        },
    },
    value: List(
        [],
    ),
}
