crates/nash-parse/src/pattern/snapshots/nash_parse__pattern__list__tests__multiline.snap
---
source: crates/nash-parse/src/pattern/list.rs
description: "Code:\n\n[\n    a,\n    b,\n    c\n]"
---
Located {
    region: Region {
        start: Position {
            line: 1,
            column: 1,
        },
        end: Position {
            line: 5,
            column: 2,
        },
    },
    value: List(
        [
            Located {
                region: Region {
                    start: Position {
                        line: 2,
                        column: 5,
                    },
                    end: Position {
                        line: 2,
                        column: 6,
                    },
                },
                value: Var(
                    "a",
                ),
            },
            Located {
                region: Region {
                    start: Position {
                        line: 3,
                        column: 5,
                    },
                    end: Position {
                        line: 3,
                        column: 6,
                    },
                },
                value: Var(
                    "b",
                ),
            },
            Located {
                region: Region {
                    start: Position {
                        line: 4,
                        column: 5,
                    },
                    end: Position {
                        line: 4,
                        column: 6,
                    },
                },
                value: Var(
                    "c",
                ),
            },
        ],
    ),
}
