crates/nash-parse/src/pattern/snapshots/nash_parse__pattern__list__tests__nested.snap
---
source: crates/nash-parse/src/pattern/list.rs
description: "Code:\n\n[[a], [b, c]]"
---
Located {
    region: Region {
        start: Position {
            line: 1,
            column: 1,
        },
        end: Position {
            line: 1,
            column: 14,
        },
    },
    value: List(
        [
            Located {
                region: Region {
                    start: Position {
                        line: 1,
                        column: 2,
                    },
                    end: Position {
                        line: 1,
                        column: 5,
                    },
                },
                value: List(
                    [
                        Located {
                            region: Region {
                                start: Position {
                                    line: 1,
                                    column: 3,
                                },
                                end: Position {
                                    line: 1,
                                    column: 4,
                                },
                            },
                            value: Var(
                                "a",
                            ),
                        },
                    ],
                ),
            },
            Located {
                region: Region {
                    start: Position {
                        line: 1,
                        column: 7,
                    },
                    end: Position {
                        line: 1,
                        column: 13,
                    },
                },
                value: List(
                    [
                        Located {
                            region: Region {
                                start: Position {
                                    line: 1,
                                    column: 8,
                                },
                                end: Position {
                                    line: 1,
                                    column: 9,
                                },
                            },
                            value: Var(
                                "b",
                            ),
                        },
                        Located {
                            region: Region {
                                start: Position {
                                    line: 1,
                                    column: 11,
                                },
                                end: Position {
                                    line: 1,
                                    column: 12,
                                },
                            },
                            value: Var(
                                "c",
                            ),
                        },
                    ],
                ),
            },
        ],
    ),
}
