crates/nash-parse/src/pattern/snapshots/nash_parse__pattern__list__tests__single.snap
---
source: crates/nash-parse/src/pattern/list.rs
description: "Code:\n\n[a]"
---
Located {
    region: Region {
        start: Position {
            line: 1,
            column: 1,
        },
        end: Position {
            line: 1,
            column: 4,
        },
    },
    value: List(
        [
            Located {
                region: Region {
                    start: Position {
                        line: 1,
                        column: 2,
                    },
                    end: Position {
                        line: 1,
                        column: 3,
                    },
                },
                value: Var(
                    "a",
                ),
            },
        ],
    ),
}
